--- a/index.html
+++ b/index.html
@@ -3,13 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Inter"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Inknut Antiqua"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Jupiter</title>
   </head>
   <body>
     <header></header>
     <main>
-      <section></section>
-      <section></section>
+      <div class="pimg"></div>
+      <section>
+        <h2>Tittel test</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus nam
+          quas quaerat tempora libero tempore, amet illum sapiente saepe
+          aspernatur, quisquam fugiat magnam eaque eos ab error dolorum eligendi
+          commodi! Incidunt saepe nisi ad, deserunt voluptatibus natus dolor
+          quos eligendi tenetur quibusdam? Delectus dolorem beatae illo nulla
+          sapiente libero sequi!
+        </p>
+      </section>
+      <div class="pimg"></div>
+      <section>
+        <h2>Tittel test</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus nam
+          quas quaerat tempora libero tempore, amet illum sapiente saepe
+          aspernatur, quisquam fugiat magnam eaque eos ab error dolorum eligendi
+          commodi! Incidunt saepe nisi ad, deserunt voluptatibus natus dolor
+          quos eligendi tenetur quibusdam? Delectus dolorem beatae illo nulla
+          sapiente libero sequi!
+        </p>
+      </section>
     </main>
     <footer></footer>
   </body>
