nytt parallax bilde

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header></header>
     <main>
-      <div class="pimg"></div>
+      <div class="pimg pimg1"></div>
       <section>
         <h2>Tittel test</h2>
         <p>
@@ -29,7 +29,7 @@
           sapiente libero sequi!
         </p>
       </section>
-      <div class="pimg"></div>
+      <div class="pimg pimg2"></div>
       <section>
         <h2>Tittel test</h2>
         <p>
