lagde ferdig flex klasser

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header></header>
     <main>
       <div class="pimg pimg1"></div>
-      <section>
+      <section class="DisplayFlexColumnRightTop">
         <h2>Tittel test</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus nam
@@ -30,7 +30,7 @@
         </p>
       </section>
       <div class="pimg pimg2"></div>
-      <section>
+      <section class="DisplayFlexRowRightBottom">
         <h2>Tittel test</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus nam
