ferdig med å pynte nettsiden

--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="img/jupiter.ico" sizes="512x512" />
     <title>Jupiter</title>
   </head>
   <body>
+    <script src="index.js" type="module" defer></script>
     <!--Header-->
     <header class="DisplayFlexRowSpaceBetweenMiddle">
       <h6>MySite</h6>
-      <h6 id="englishnorsk">
+      <button id="englishnorsk">
         <span class="english">English</span> |
         <span class="norsk">Norsk</span>
-      </h6>
+      </button>
     </header>
     <!--main-->
     <main>
@@ -60,7 +62,7 @@
           </p>
         </div>
       </section>
-      <div class="pimg pimg2"></div>
+      <div class="pimg pimg6"></div>
       <!--Atmosfæren-->
       <section class="DisplayFlexRowSpaceAroundTop" id="Atmosfæren">
         <div class="DisplayFlexRowSpaceBetweenTop">
@@ -128,7 +130,7 @@
           />
         </div>
       </section>
-      <div class="pimg pimg2"></div>
+      <div class="pimg pimg7"></div>
       <!--EyeOfTheStorm-->
       <section class="DisplayFlexRowSpaceAroundTop" id="EyeOfTheStorm">
         <p class="DisplayFlexColumnRightTop">
@@ -203,13 +205,13 @@
             euismod.
           </p>
           <img
-            src="img/GreatRedSpot.webp"
+            src="img/earthinfrontofjupiter.webp"
             alt="GreatRedSpot"
             id="ImgGreatRedSpot"
           />
         </div>
       </section>
-      <div class="pimg pimg2"></div>
+      <div class="pimg pimg8"></div>
       <!--Ring-->
       <section class="DisplayFlexRowReverseSpaceAroundTop" id="Ring">
         <p class="DisplayFlexColumnRightTop">
@@ -290,7 +292,7 @@
           />
         </div>
       </section>
-      <div class="pimg pimg3"></div>
+      <div class="pimg pimg5"></div>
       <!--Moons-->
       <section class="DisplayFlexRowReverseSpaceAroundTop" id="Moons">
         <p class="DisplayFlexColumnRightTop">
@@ -371,7 +373,7 @@
           />
         </div>
       </section>
-      <div class="pimg pimg2"></div>
+      <div class="pimg pimg3"></div>
       <section class="DisplayFlexColumnReverseMiddleSpaceAround" id="Europa">
         <div class="DisplayFlexRowMiddleMiddle">
           <p>
