ferdig med norsk tekst på the great red spot.

--- a/index.html
+++ b/index.html
@@ -133,77 +133,33 @@
       <div class="pimg pimg7"></div>
       <!--EyeOfTheStorm-->
       <section class="DisplayFlexRowSpaceAroundTop" id="EyeOfTheStorm">
-        <p class="DisplayFlexColumnRightTop">
-          Lorem ipsum dolor sit amet consectetur. Fermentum sapien magna amet
-          aliquet lectus at odio ultrices condimentum. Vel lacus iaculis sed in
-          nulla aliquam vivamus. Laoreet ullamcorper vitae nisi in sed leo vel
-          dignissim arcu. Adipiscing turpis euismod ipsum augue nec dui nibh
-          cursus. Neque pharetra quis phasellus interdum fusce feugiat tempus.
-          Adipiscing aliquam semper facilisi neque sit phasellus. Tristique
-          proin cum pretium faucibus viverra. Adipiscing non est feugiat ornare
-          nunc et duis justo nullam. Ultricies laoreet molestie vulputate a
-          pellentesque posuere vel. Donec convallis amet nunc dapibus. Eu
-          aliquet molestie sed integer. Quis dictum aenean habitant a justo
-          pellentesque amet faucibus. Quis fringilla nisi purus quis nullam
-          convallis. Ut fames nibh diam proin blandit odio massa. At congue
-          vitae nulla diam tortor sit diam. Nisl lacus nisl id lobortis. Eu
-          vitae duis enim neque pharetra congue ac posuere lacus. Duis velit
-          faucibus vestibulum ut est risus sit fames leo. Interdum scelerisque
-          egestas metus lorem sagittis cras proin cursus malesuada. Nunc nec
-          consequat sed laoreet scelerisque sit quam sed. Varius malesuada at
-          non dui adipiscing non. Risus vitae purus bibendum amet. Leo bibendum
-          lobortis eleifend placerat lectus elit mauris. Amet euismod fringilla
-          nunc id. Sagittis tempor dignissim tristique sit. Tempus bibendum non
-          malesuada mattis. Eget cras est placerat consequat. Volutpat imperdiet
-          pulvinar volutpat sit nec et ac. Sed gravida integer magna tristique
-          cras elit amet. Nisi id cras luctus vitae eget eget risus nunc.
-          Malesuada morbi ut dignissim euismod id turpis tellus. Semper magna
-          aliquet est ut in vitae. Risus senectus porta dignissim etiam
-          volutpat. Lorem ipsum dolor sit amet consectetur. Fermentum sapien
-          magna amet aliquet lectus at odio ultrices condimentum. Vel lacus
-          iaculis sed in nulla aliquam vivamus. Laoreet ullamcorper vitae nisi
-          in sed leo vel dignissim arcu. Adipiscing turpis euismod ipsum augue
-          nec dui nibh cursus. Neque pharetra quis phasellus interdum fusce
-          feugiat tempus. Adipiscing aliquam semper facilisi neque sit
-          phasellus. Tristique proin cum pretium faucibus viverra. Adipiscing
-          non est feugiat ornare nunc et duis justo nullam. Ultricies laoreet
-          molestie vulputate a pellentesque posuere vel. Donec convallis amet
-          nunc dapibus. Eu aliquet molestie sed integer. Quis dictum aenean
-          habitant a justo pellentesque amet faucibus. Quis fringilla nisi purus
-          quis nullam convallis. Ut fames nibh diam proin blandit odio massa. At
-          congue vitae nulla diam tortor sit diam. Nisl lacus nisl id lobortis.
-          Eu vitae duis enim neque pharetra congue ac posuere lacus. Duis velit
-          faucibus vestibulum ut est risus sit fames leo. Interdum scelerisque
-          egestas metus lorem sagittis cras proin cursus malesuada. Nunc nec
-          consequat sed laoreet scelerisque sit quam sed. Varius malesuada at
-          non dui adipiscing non. Risus vitae purus bibendum amet. Leo bibendum
-          lobortis eleifend placerat lectus elit mauris. Amet euismod fringilla
-          nunc id. Sagittis tempor dignissim tristique sit. Tempus bibendum non
-          malesuada mattis. Eget cras est placerat consequat. Volutpat imperdiet
-          pulvinar volutpat sit nec et ac. Sed gravida integer magna tristique
-          cras elit amet. Nisi id cras luctus vitae eget eget risus nunc.
-          Malesuada morbi ut dignissim euismod id turpis tellus. Semper magna
-          aliquet est ut in vitae. Risus senectus porta dignissim etiam
-          volutpat.
-        </p>
-        <div class="DisplayFlexColumnReverseMiddleSpaceAround">
-          <p>
-            Lorem ipsum dolor sit amet consectetur. Commodo nam ut malesuada
-            urna aliquet ac diam. Non nec quisque erat faucibus id malesuada
-            tristique. Quam nunc scelerisque euismod sed. Condimentum dui
-            pellentesque purus dolor purus sit eget nibh viverra. Diam elementum
-            vestibulum purus odio. Facilisis id fames in nibh cursus. Enim
-            turpis non et nunc sed ac dictum. Egestas gravida nulla nunc
-            faucibus velit amet amet. Volutpat elit nec id neque. Nibh dui nunc
-            lacus ullamcorper risus amet amet. Eget amet mi arcu lectus id ut
-            vestibulum. Praesent luctus eget vel nibh. Urna tincidunt consequat
-            in quisque. Dignissim pharetra aliquam dignissim dolor. Tellus
-            cursus pellentesque vel tellus. Facilisi rutrum amet scelerisque in
-            erat bibendum. Quam aliquet velit velit quis sapien tincidunt sed
-            dolor urna. Vulputate lectus ac praesent tortor facilisi nisl
-            tellus. Adipiscing iaculis sodales quam feugiat sed dui tincidunt
-            euismod.
+        <div class="DisplayFlexColomnMiddleTop firstparagraph">
+          <h1>"The Great Red Spot"</h1>
+          <p class="DisplayFlexColumnRightTop">
+            Den røde flekke, på godt norsk, er den lengst varende stormen som
+            man har kjennskap til. Den ble først obsevert i 1831 av en tysk
+            amatør astonom, Samuel, Heinrich Schwabe.
+            <br /><br />
+            Den rød-orange farge er usikkert hva kan komme av. Det er har blitt
+            foreslått av forbidnelser av sulfur og fosfor kan være årsaken til
+            fargen. Til tider kommer det hvite skyer over og dekker stormen. Det
+            gjør at stormen gir også gir et uttryk av grå farge i ny og ne.
+            Stormen er plassert 22 grader sør for ekvator for Jupiter.
+            Høyoppløste bilder tatt av voyager viser at stormen er et høytrykk
+            senter, og i henhold globens rotasjonsretning, posisjon, og
+            corrilios effekten, så resulterer det til av man kan se at stormer
+            roterer mot klokken.
+            <br /><br />
+            I slutten av 1800-tallet ble stormen observerttil å være 48.000 km
+            diameter. I 1979 tok Romskipet Voyager høyoppløstebilder av stormen,
+            og målte at den var 23.000 km i diameter. Hvilket enkelt kan
+            konsummere jordas diameter på 12.742 km. Stormen ble observert til å
+            være en grad av oval. Siden 2012 har stormen blitt observert til å
+            krympe raskere enn noen sinne med 900 km i diameter hver jordisk år.
           </p>
+        </div>
+        <div class="DisplayFlexColumnReverseMiddleSpaceAround">
+          <p></p>
           <img
             src="img/earthinfrontofjupiter.webp"
             alt="GreatRedSpot"
