--- a/index.html
+++ b/index.html
@@ -171,76 +171,19 @@
       <!--Ring-->
       <section class="DisplayFlexRowReverseSpaceAroundTop" id="Ring">
         <p class="DisplayFlexColumnRightTop">
-          Lorem ipsum dolor sit amet consectetur. Fermentum sapien magna amet
-          aliquet lectus at odio ultrices condimentum. Vel lacus iaculis sed in
-          nulla aliquam vivamus. Laoreet ullamcorper vitae nisi in sed leo vel
-          dignissim arcu. Adipiscing turpis euismod ipsum augue nec dui nibh
-          cursus. Neque pharetra quis phasellus interdum fusce feugiat tempus.
-          Adipiscing aliquam semper facilisi neque sit phasellus. Tristique
-          proin cum pretium faucibus viverra. Adipiscing non est feugiat ornare
-          nunc et duis justo nullam. Ultricies laoreet molestie vulputate a
-          pellentesque posuere vel. Donec convallis amet nunc dapibus. Eu
-          aliquet molestie sed integer. Quis dictum aenean habitant a justo
-          pellentesque amet faucibus. Quis fringilla nisi purus quis nullam
-          convallis. Ut fames nibh diam proin blandit odio massa. At congue
-          vitae nulla diam tortor sit diam. Nisl lacus nisl id lobortis. Eu
-          vitae duis enim neque pharetra congue ac posuere lacus. Duis velit
-          faucibus vestibulum ut est risus sit fames leo. Interdum scelerisque
-          egestas metus lorem sagittis cras proin cursus malesuada. Nunc nec
-          consequat sed laoreet scelerisque sit quam sed. Varius malesuada at
-          non dui adipiscing non. Risus vitae purus bibendum amet. Leo bibendum
-          lobortis eleifend placerat lectus elit mauris. Amet euismod fringilla
-          nunc id. Sagittis tempor dignissim tristique sit. Tempus bibendum non
-          malesuada mattis. Eget cras est placerat consequat. Volutpat imperdiet
-          pulvinar volutpat sit nec et ac. Sed gravida integer magna tristique
-          cras elit amet. Nisi id cras luctus vitae eget eget risus nunc.
-          Malesuada morbi ut dignissim euismod id turpis tellus. Semper magna
-          aliquet est ut in vitae. Risus senectus porta dignissim etiam
-          volutpat. Lorem ipsum dolor sit amet consectetur. Fermentum sapien
-          magna amet aliquet lectus at odio ultrices condimentum. Vel lacus
-          iaculis sed in nulla aliquam vivamus. Laoreet ullamcorper vitae nisi
-          in sed leo vel dignissim arcu. Adipiscing turpis euismod ipsum augue
-          nec dui nibh cursus. Neque pharetra quis phasellus interdum fusce
-          feugiat tempus. Adipiscing aliquam semper facilisi neque sit
-          phasellus. Tristique proin cum pretium faucibus viverra. Adipiscing
-          non est feugiat ornare nunc et duis justo nullam. Ultricies laoreet
-          molestie vulputate a pellentesque posuere vel. Donec convallis amet
-          nunc dapibus. Eu aliquet molestie sed integer. Quis dictum aenean
-          habitant a justo pellentesque amet faucibus. Quis fringilla nisi purus
-          quis nullam convallis. Ut fames nibh diam proin blandit odio massa. At
-          congue vitae nulla diam tortor sit diam. Nisl lacus nisl id lobortis.
-          Eu vitae duis enim neque pharetra congue ac posuere lacus. Duis velit
-          faucibus vestibulum ut est risus sit fames leo. Interdum scelerisque
-          egestas metus lorem sagittis cras proin cursus malesuada. Nunc nec
-          consequat sed laoreet scelerisque sit quam sed. Varius malesuada at
-          non dui adipiscing non. Risus vitae purus bibendum amet. Leo bibendum
-          lobortis eleifend placerat lectus elit mauris. Amet euismod fringilla
-          nunc id. Sagittis tempor dignissim tristique sit. Tempus bibendum non
-          malesuada mattis. Eget cras est placerat consequat. Volutpat imperdiet
-          pulvinar volutpat sit nec et ac. Sed gravida integer magna tristique
-          cras elit amet. Nisi id cras luctus vitae eget eget risus nunc.
-          Malesuada morbi ut dignissim euismod id turpis tellus. Semper magna
-          aliquet est ut in vitae. Risus senectus porta dignissim etiam
-          volutpat.
+          Jupiter ringer ble oppdaget i 1979 da Voyager 1 hadde seglet forbi
+          Jupiter, etter at ringene til Saturn og Uranus ble oppdaget. De er
+          veldig svake, men består av forøvrig bare av støv. De kan kun ble
+          observert ra jorden med de kraftigste teleskopene som fins, derav
+          Hubble Space Telescope.
+          <br /><br />
+          Ringene berstår av 4 deler: Halo ring, main ring, Amalthea gossamer
+          ring, og Thebe gossamer ring. Amalthea og Thebe er måner av Jupiter
+          som skiller lagene av ringene. Halo er den tjukkeste delen, main er
+          den tynneste, og resten er relativt tjukk.
         </p>
         <div class="DisplayFlexColumnReverseMiddleSpaceAround">
-          <p>
-            Lorem ipsum dolor sit amet consectetur. Commodo nam ut malesuada
-            urna aliquet ac diam. Non nec quisque erat faucibus id malesuada
-            tristique. Quam nunc scelerisque euismod sed. Condimentum dui
-            pellentesque purus dolor purus sit eget nibh viverra. Diam elementum
-            vestibulum purus odio. Facilisis id fames in nibh cursus. Enim
-            turpis non et nunc sed ac dictum. Egestas gravida nulla nunc
-            faucibus velit amet amet. Volutpat elit nec id neque. Nibh dui nunc
-            lacus ullamcorper risus amet amet. Eget amet mi arcu lectus id ut
-            vestibulum. Praesent luctus eget vel nibh. Urna tincidunt consequat
-            in quisque. Dignissim pharetra aliquam dignissim dolor. Tellus
-            cursus pellentesque vel tellus. Facilisi rutrum amet scelerisque in
-            erat bibendum. Quam aliquet velit velit quis sapien tincidunt sed
-            dolor urna. Vulputate lectus ac praesent tortor facilisi nisl
-            tellus. Adipiscing iaculis sodales quam feugiat sed dui tincidunt
-            euismod.
-          </p>
+          <p></p>
           <img
             src="img/jupiterrings.webp"
             alt="jupiterrings"
