fjernet ubrukte bilder, skrev ferdig tekst norsk,

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="pimg pimg7"></div>
       <!--EyeOfTheStorm-->
       <section class="DisplayFlexRowSpaceAroundTop" id="EyeOfTheStorm">
-        <div class="DisplayFlexColomnMiddleTop firstparagraph">
+        <div class="DisplayFlexColumnMiddleTop firstparagraph">
           <h1>"The Great Red Spot"</h1>
           <p class="DisplayFlexColumnRightTop">
             Den røde flekke, på godt norsk, er den lengst varende stormen som
@@ -170,18 +170,21 @@
       <div class="pimg pimg8"></div>
       <!--Ring-->
       <section class="DisplayFlexRowReverseSpaceAroundTop" id="Ring">
-        <p class="DisplayFlexColumnRightTop">
-          Jupiter ringer ble oppdaget i 1979 da Voyager 1 hadde seglet forbi
-          Jupiter, etter at ringene til Saturn og Uranus ble oppdaget. De er
-          veldig svake, men består av forøvrig bare av støv. De kan kun ble
-          observert ra jorden med de kraftigste teleskopene som fins, derav
-          Hubble Space Telescope.
-          <br /><br />
-          Ringene berstår av 4 deler: Halo ring, main ring, Amalthea gossamer
-          ring, og Thebe gossamer ring. Amalthea og Thebe er måner av Jupiter
-          som skiller lagene av ringene. Halo er den tjukkeste delen, main er
-          den tynneste, og resten er relativt tjukk.
-        </p>
+        <div class="DisplayFlexColumnMiddleTop firstparagraph">
+          <h1>Jupiters Ringer</h1>
+          <p class="DisplayFlexColumnRightTop">
+            Jupiter ringer ble oppdaget i 1979 da Voyager 1 hadde seglet forbi
+            Jupiter, etter at ringene til Saturn og Uranus ble oppdaget. De er
+            veldig svake, men består av forøvrig bare av støv. De kan kun ble
+            observert ra jorden med de kraftigste teleskopene som fins, derav
+            Hubble Space Telescope.
+            <br /><br />
+            Ringene berstår av 4 deler: Halo ring, main ring, Amalthea gossamer
+            ring, og Thebe gossamer ring. Amalthea og Thebe er måner av Jupiter
+            som skiller lagene av ringene. Halo er den tjukkeste delen, main er
+            den tynneste, og resten er relativt tjukk.
+          </p>
+        </div>
         <div class="DisplayFlexColumnReverseMiddleSpaceAround">
           <p></p>
           <img
@@ -194,77 +197,25 @@
       <div class="pimg pimg5"></div>
       <!--Moons-->
       <section class="DisplayFlexRowReverseSpaceAroundTop" id="Moons">
-        <p class="DisplayFlexColumnRightTop">
-          Lorem ipsum dolor sit amet consectetur. Fermentum sapien magna amet
-          aliquet lectus at odio ultrices condimentum. Vel lacus iaculis sed in
-          nulla aliquam vivamus. Laoreet ullamcorper vitae nisi in sed leo vel
-          dignissim arcu. Adipiscing turpis euismod ipsum augue nec dui nibh
-          cursus. Neque pharetra quis phasellus interdum fusce feugiat tempus.
-          Adipiscing aliquam semper facilisi neque sit phasellus. Tristique
-          proin cum pretium faucibus viverra. Adipiscing non est feugiat ornare
-          nunc et duis justo nullam. Ultricies laoreet molestie vulputate a
-          pellentesque posuere vel. Donec convallis amet nunc dapibus. Eu
-          aliquet molestie sed integer. Quis dictum aenean habitant a justo
-          pellentesque amet faucibus. Quis fringilla nisi purus quis nullam
-          convallis. Ut fames nibh diam proin blandit odio massa. At congue
-          vitae nulla diam tortor sit diam. Nisl lacus nisl id lobortis. Eu
-          vitae duis enim neque pharetra congue ac posuere lacus. Duis velit
-          faucibus vestibulum ut est risus sit fames leo. Interdum scelerisque
-          egestas metus lorem sagittis cras proin cursus malesuada. Nunc nec
-          consequat sed laoreet scelerisque sit quam sed. Varius malesuada at
-          non dui adipiscing non. Risus vitae purus bibendum amet. Leo bibendum
-          lobortis eleifend placerat lectus elit mauris. Amet euismod fringilla
-          nunc id. Sagittis tempor dignissim tristique sit. Tempus bibendum non
-          malesuada mattis. Eget cras est placerat consequat. Volutpat imperdiet
-          pulvinar volutpat sit nec et ac. Sed gravida integer magna tristique
-          cras elit amet. Nisi id cras luctus vitae eget eget risus nunc.
-          Malesuada morbi ut dignissim euismod id turpis tellus. Semper magna
-          aliquet est ut in vitae. Risus senectus porta dignissim etiam
-          volutpat. Lorem ipsum dolor sit amet consectetur. Fermentum sapien
-          magna amet aliquet lectus at odio ultrices condimentum. Vel lacus
-          iaculis sed in nulla aliquam vivamus. Laoreet ullamcorper vitae nisi
-          in sed leo vel dignissim arcu. Adipiscing turpis euismod ipsum augue
-          nec dui nibh cursus. Neque pharetra quis phasellus interdum fusce
-          feugiat tempus. Adipiscing aliquam semper facilisi neque sit
-          phasellus. Tristique proin cum pretium faucibus viverra. Adipiscing
-          non est feugiat ornare nunc et duis justo nullam. Ultricies laoreet
-          molestie vulputate a pellentesque posuere vel. Donec convallis amet
-          nunc dapibus. Eu aliquet molestie sed integer. Quis dictum aenean
-          habitant a justo pellentesque amet faucibus. Quis fringilla nisi purus
-          quis nullam convallis. Ut fames nibh diam proin blandit odio massa. At
-          congue vitae nulla diam tortor sit diam. Nisl lacus nisl id lobortis.
-          Eu vitae duis enim neque pharetra congue ac posuere lacus. Duis velit
-          faucibus vestibulum ut est risus sit fames leo. Interdum scelerisque
-          egestas metus lorem sagittis cras proin cursus malesuada. Nunc nec
-          consequat sed laoreet scelerisque sit quam sed. Varius malesuada at
-          non dui adipiscing non. Risus vitae purus bibendum amet. Leo bibendum
-          lobortis eleifend placerat lectus elit mauris. Amet euismod fringilla
-          nunc id. Sagittis tempor dignissim tristique sit. Tempus bibendum non
-          malesuada mattis. Eget cras est placerat consequat. Volutpat imperdiet
-          pulvinar volutpat sit nec et ac. Sed gravida integer magna tristique
-          cras elit amet. Nisi id cras luctus vitae eget eget risus nunc.
-          Malesuada morbi ut dignissim euismod id turpis tellus. Semper magna
-          aliquet est ut in vitae. Risus senectus porta dignissim etiam
-          volutpat.
-        </p>
-        <div class="DisplayFlexColumnReverseMiddleSpaceAround">
-          <p>
-            Lorem ipsum dolor sit amet consectetur. Commodo nam ut malesuada
-            urna aliquet ac diam. Non nec quisque erat faucibus id malesuada
-            tristique. Quam nunc scelerisque euismod sed. Condimentum dui
-            pellentesque purus dolor purus sit eget nibh viverra. Diam elementum
-            vestibulum purus odio. Facilisis id fames in nibh cursus. Enim
-            turpis non et nunc sed ac dictum. Egestas gravida nulla nunc
-            faucibus velit amet amet. Volutpat elit nec id neque. Nibh dui nunc
-            lacus ullamcorper risus amet amet. Eget amet mi arcu lectus id ut
-            vestibulum. Praesent luctus eget vel nibh. Urna tincidunt consequat
-            in quisque. Dignissim pharetra aliquam dignissim dolor. Tellus
-            cursus pellentesque vel tellus. Facilisi rutrum amet scelerisque in
-            erat bibendum. Quam aliquet velit velit quis sapien tincidunt sed
-            dolor urna. Vulputate lectus ac praesent tortor facilisi nisl
-            tellus. Adipiscing iaculis sodales quam feugiat sed dui tincidunt
-            euismod.
+        <div class="DisplayFlexColumnMiddleTop firstparagraph">
+          <h1>Jupiters måner</h1>
+          <p class="DisplayFlexColumnRightTop">
+            Jupiter har totalt 95 måner. 4 av de største ble oppdaget av Galileo
+            Galilei i 1600. Io, Europa, Ganymade, og Gallisto er navnet til de 4
+            største månene som er illustrert i blidet. 5. måne ble ikke oppdaget
+            før i 1892.
+            <br /><br />
+            Selv om det er 95 bekreftede måner, så utelater det ikke at det fins
+            flere måner i Jovian belte som ikke er oppdaget eller annerkjent som
+            måner enda. Jupiter har tusenvis av små objekter som roteres rundt,
+            både måner, partikler i ringene, og astroider. Vitenskapmenn har
+            blitt så god til å oppdage partikler i bane, at nye observerte
+            objekter ikke blir gitt navn om de ikke er av spesiell interesse for
+            vitenskapen.
           </p>
+        </div>
+        <div class="DisplayFlexColumnReverseMiddleSpaceAround">
+          <p></p>
           <img
             src="img/Jupiters4Moons.webp"
             alt="Jupiters4Moons"
@@ -276,42 +227,15 @@
       <section class="DisplayFlexColumnReverseMiddleSpaceAround" id="Europa">
         <div class="DisplayFlexRowMiddleMiddle">
           <p>
-            Lorem ipsum dolor sit amet consectetur. Et amet in aliquet risus
-            sit. Etiam pulvinar adipiscing vitae tincidunt quis pretium non
-            pellentesque. Dictumst egestas felis eu scelerisque velit cras
-            fringilla. Rhoncus adipiscing tempor ullamcorper in urna ac nulla.
-            Rhoncus arcu cras nunc tristique. Morbi sit enim nulla molestie
-            eleifend. Diam aliquet sit faucibus condimentum erat aliquet ac.
-            Ipsum habitant diam tristique amet. Dignissim ac nunc consectetur
-            enim ullamcorper mattis aliquet. Rutrum arcu odio urna vulputate sed
-            venenatis egestas viverra cursus. Faucibus eget elit ac vivamus
-            mauris consectetur eu diam. Ut cras adipiscing viverra vel dui sit
-            odio integer. Varius proin at velit quisque tincidunt in amet
-            cursus. Lobortis eu magna risus diam vel egestas cursus urna amet.
-            Lorem id scelerisque eget orci mattis est. Aliquet dictum vestibulum
-            lacus est egestas in. Lacus ac ipsum tempor interdum suspendisse
-            platea dignissim. Id suspendisse nunc lorem quisque habitant id
-            maecenas. At purus aliquam quis consectetur aliquam. Laoreet orci
-            egestas magna arcu accumsan in bibendum ipsum non. Enim congue
-            tellus volutpat tristique tristique. Etiam auctor neque sed lobortis
-            mauris sem pellentesque duis. Fames dolor rhoncus odio sagittis
-            quisque vulputate sed turpis a. Molestie a suspendisse nunc nunc.
-            Augue felis massa enim nisi porttitor. Ut amet nullam elit magna
-            elementum eu id lectus. Quisque vulputate est cras donec neque
-            tempor. Nullam faucibus integer dictum ut. Feugiat porttitor
-            ultrices faucibus massa neque dolor nec. Tristique ac at at quam
-            congue eget dui. Nullam in massa risus semper. Ut montes enim elit
-            maecenas etiam. Enim maecenas vestibulum luctus tincidunt viverra
-            felis purus rutrum viverra. Aliquam vulputate feugiat scelerisque
-            consectetur lacus. Luctus habitasse risus elementum libero
-            condimentum non at eget. Volutpat risus leo sodales dapibus etiam
-            laoreet. Sed non natoque mi id nisl risus nulla. Dictum volutpat nec
-            scelerisque amet consectetur. Diam et gravida sagittis nunc
-            pellentesque vel scelerisque. Eget magna ipsum quis amet cursus.
-            Proin semper aliquam morbi nullam aliquet accumsan elit dictum.
-            Volutpat massa sed volutpat in eget pellentesque. Eget ornare vitae
-            elementum sit. Eu diam sem platea tristique aliquet nulla sed.
-            Pretium quis neque vitae lectus dolor eleifend porta sem.
+            Europa er den første månen i solsystemet vårt som ble oppdaget etter
+            jordklodens egen måne. Den er navngitt etter Galileo Galilei, som i
+            Januar i 1610 oppdaget den med et hjemmelaget teleskop. <br /><br />
+            Månen består av Silikat berg med Jern-nikkel kjerne. Skallet består
+            av islag som dekker hele månens overflate. Det er antatt at månen
+            inneholder dobbelt så mye vann som hele jordkloden vår, og muligens
+            miniraler i vannnmedie som kan støtte liv. I 2024 vil NASA skyte opp
+            satelitter som skal gå i bane rundt månen for å sjekke om månen kan
+            støtte liv. Det er antatt at den vil være framme i 2030.
           </p>
           <img
             src="img/EuropasIndre.webp"
@@ -320,8 +244,16 @@
           />
         </div>
         <img src="img/Europa.webp" alt="Europa" id="ImgEuropa" />
+        <h1>Europa</h1>
+      </section>
+      <!--kilder-->
+      <section class="DisplayFlexColumnMiddleTop" id="kilder">
+        <ul>
+          <li>førstekilde</li>
+        </ul>
       </section>
     </main>
-    <footer></footer>
+    <!--footer-->
+    <footer class="DisplayFlexColumnMiddleTop">første footer</footer>
   </body>
 </html>
