la til footer, må fikse intro i branch intro

--- a/index.html
+++ b/index.html
@@ -246,14 +246,16 @@
         <img src="img/Europa.webp" alt="Europa" id="ImgEuropa" />
         <h1>Europa</h1>
       </section>
+      <div class="pimg pimg1"></div>
       <!--kilder-->
       <section class="DisplayFlexColumnMiddleTop" id="kilder">
         <ul>
           <li>førstekilde</li>
         </ul>
       </section>
+      <div class="pimg pimg2"></div>
     </main>
     <!--footer-->
-    <footer class="DisplayFlexColumnMiddleTop">første footer</footer>
+    <footer>første footer</footer>
   </body>
 </html>
