--- a/index.html
+++ b/index.html
@@ -28,22 +28,32 @@
     <!--main-->
     <main>
       <!--introduksjon-->
-      <section class="DisplayFlexColumnRightSpaceBetween" id="introduksjon">
-        <div class="DisplayFlexColumnLeftSpaceAround">
-          <h1>-- Jupiter --</h1>
-          <p>
-            Jupiter er den største planeten i solsystemet, dobbel så stor som
-            massen av alle de andre planetene sin masse til sammen.
-            <br /><br />
-            Nøkkel-stikkord
-          </p>
-          <ul>
-            <li>95 måner</li>
-            <li>2 satelitter</li>
-            <li>Great Red Spot</li>
-          </ul>
+      <section class="DisplayFlexColumnRightSpaceBetween" id="introduksjon2">
+        <div class="imgcontainer">
+          <img
+            src="img/JupiterIntro.webp"
+            alt="JupiterIntro"
+            id="ImgJupiterIntro"
+          />
+          <div class="imgtekst">
+            <div class="DisplayFlexColumnLeftSpaceAround">
+              <h1>-- Jupiter --</h1>
+              <p>
+                Jupiter er den største planeten i solsystemet, dobbel så stor
+                som massen av alle de andre planetene sin masse til sammen.
+                <br /><br />
+                Nøkkel-stikkord
+              </p>
+              <ul>
+                <li>95 måner</li>
+                <li>2 satelitter</li>
+                <li>Great Red Spot</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
+
       <div class="pimg pimg4"></div>
       <!--Jupiter-->
       <section class="DisplayFlexRowSpaceAroundMiddle" id="Jupiter">
