--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=Inter"
       rel="stylesheet"
     />
@@ -53,7 +57,17 @@
           </div>
         </div>
       </section>
-
+      <section class="DisplayFlexColumnRightSpaceBetween" id="myswiping">
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide slide_1">Slide 1</div>
+            <div class="swiper-slide slide_2">Slide 2</div>
+            <div class="swiper-slide slide_3">Slide 3</div>
+            <div class="swiper-slide slide_4">Slide 4</div>
+            <div class="swiper-slide slide_5">Slide 5</div>
+          </div>
+        </div>
+      </section>
       <div class="pimg pimg4"></div>
       <!--Jupiter-->
       <section class="DisplayFlexRowSpaceAroundMiddle" id="Jupiter">
