blir ferdig med nav buttons imorgen.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
-    />
-    <link
       href="https://fonts.googleapis.com/css?family=Inter"
       rel="stylesheet"
     />
@@ -57,18 +53,77 @@
           </div>
         </div>
       </section>
-      <section class="DisplayFlexColumnRightSpaceBetween" id="myswiping">
-        <div class="swiper mySwiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide slide_1">Slide 1</div>
-            <div class="swiper-slide slide_2">Slide 2</div>
-            <div class="swiper-slide slide_3">Slide 3</div>
-            <div class="swiper-slide slide_4">Slide 4</div>
-            <div class="swiper-slide slide_5">Slide 5</div>
+      <!--myswiping-->
+      <section class="DisplayFlexColumnMiddleMiddle" id="myswiping">
+        <div class="swipey-bar-wrapper">
+          <div class="swipey-bar-container">
+            <a href="#Jupiter" class="swipey-box">
+              <span class="swipey-box-name">
+                <div class="DisplayFlexRowSpaceAroundMiddle menybuttons">
+                  <div class="imgcontainterswipe DisplayFlexColumnMiddleMiddle">
+                    <img
+                      src="img/ParallaxJupiter1.webp"
+                      alt="ParallaxJupiter1Swipe"
+                      id="ImgParallaxJupiter1Swipe"
+                    />
+                  </div>
+                  <div
+                    class="DisplayFlexColumnLeftSpaceAround tekstcontainterswipe"
+                  >
+                    <p>
+                      linker til <br />
+                      Jupiter
+                    </p>
+                  </div>
+                </div> </span
+              ><!-- /.swipey-box-name --> </a
+            ><!-- /.swipey-box -->
+
+            <a href="http://www.google.com" class="swipey-box">
+              <span class="swipey-box-name"> Clothing </span
+              ><!-- /.swipey-box-name --> </a
+            ><!-- /.swipey-box -->
+
+            <a href="http://www.google.com" class="swipey-box">
+              <span class="swipey-box-name"> MAN </span
+              ><!-- /.swipey-box-name --> </a
+            ><!-- /.swipey-box -->
+
+            <a href="http://www.google.com" class="swipey-box">
+              <span class="swipey-box-name"> Big & Tall </span
+              ><!-- /.swipey-box-name --> </a
+            ><!-- /.swipey-box -->
+
+            <a href="http://www.google.com" class="swipey-box">
+              <span class="swipey-box-name"> Shoes & Accessories </span
+              ><!-- /.swipey-box-name --> </a
+            ><!-- /.swipey-box -->
+
+            <a href="http://www.google.com" class="swipey-box">
+              <span class="swipey-box-name"> Collections </span
+              ><!-- /.swipey-box-name --> </a
+            ><!-- /.swipey-box -->
+
+            <a href="http://www.google.com" class="swipey-box">
+              <span class="swipey-box-name"> Nights </span
+              ><!-- /.swipey-box-name --> </a
+            ><!-- /.swipey-box -->
+
+            <a href="http://www.google.com" class="swipey-box">
+              <span class="swipey-box-name"> Instashop </span
+              ><!-- /.swipey-box-name --> </a
+            ><!-- /.swipey-box -->
+
+            <a href="http://www.google.com" class="swipey-box">
+              <span class="swipey-box-name"> Sale </span
+              ><!-- /.swipey-box-name --> </a
+            ><!-- /.swipey-box -->
           </div>
+          <!-- /.swipey-bar-container -->
         </div>
       </section>
-      <div class="pimg pimg4"></div>
+      <div class="pimg pimgA"></div>
+      <!-- /.swipey-bar-wrapper -->
       <!--Jupiter-->
       <section class="DisplayFlexRowSpaceAroundMiddle" id="Jupiter">
         <img
@@ -86,7 +141,7 @@
           </p>
         </div>
       </section>
-      <div class="pimg pimg6"></div>
+      <div class="pimg pimgB"></div>
       <!--Atmosfæren-->
       <section class="DisplayFlexRowSpaceAroundTop" id="Atmosfæren">
         <div class="DisplayFlexRowSpaceBetweenTop">
@@ -154,7 +209,7 @@
           />
         </div>
       </section>
-      <div class="pimg pimg7"></div>
+      <div class="pimg pimgC"></div>
       <!--EyeOfTheStorm-->
       <section class="DisplayFlexRowSpaceAroundTop" id="EyeOfTheStorm">
         <div class="DisplayFlexColumnMiddleTop firstparagraph">
@@ -191,7 +246,7 @@
           />
         </div>
       </section>
-      <div class="pimg pimg8"></div>
+      <div class="pimg pimgD"></div>
       <!--Ring-->
       <section class="DisplayFlexRowReverseSpaceAroundTop" id="Ring">
         <div class="DisplayFlexColumnMiddleTop firstparagraph">
@@ -218,7 +273,7 @@
           />
         </div>
       </section>
-      <div class="pimg pimg5"></div>
+      <div class="pimg pimgE"></div>
       <!--Moons-->
       <section class="DisplayFlexRowReverseSpaceAroundTop" id="Moons">
         <div class="DisplayFlexColumnMiddleTop firstparagraph">
@@ -247,7 +302,7 @@
           />
         </div>
       </section>
-      <div class="pimg pimg3"></div>
+      <div class="pimg pimgF"></div>
       <section class="DisplayFlexColumnReverseMiddleSpaceAround" id="Europa">
         <div class="DisplayFlexRowMiddleMiddle">
           <p>
@@ -270,14 +325,14 @@
         <img src="img/Europa.webp" alt="Europa" id="ImgEuropa" />
         <h1>Europa</h1>
       </section>
-      <div class="pimg pimg1"></div>
+      <div class="pimg pimgG"></div>
       <!--kilder-->
       <section class="DisplayFlexColumnMiddleTop" id="kilder">
         <ul>
           <li>førstekilde</li>
         </ul>
       </section>
-      <div class="pimg pimg2"></div>
+      <div class="pimg pimgH"></div>
     </main>
     <!--footer-->
     <footer>første footer</footer>
